@@ -1,3 +1,9 @@
+02-09-2019
+ - Split some code up to multiple files
+ - Replaced old regex prio patterns with new ones
+ - Added getPrio()
+ - Monitor now uses getPrio()
+
 01-09-2019
  - Fixed monitor taking up 100% CPU (oops)
  - Changed colors in documentation
